feat: add phase management to sprint functionality